--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,6 +7,14 @@
   word-break: break-word;
 }
 
+.card-header > * {
+  cursor: pointer;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .clean-btn {
   background: none;
   border: none;
