--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,12 +7,8 @@
   word-break: break-word;
 }
 
-.card-header > * {
+.card-header {
   cursor: pointer;
-
-  &:hover {
-    text-decoration: underline;
-  }
 }
 
 .clean-btn {
