--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -4,8 +4,7 @@
   <div id="comment-{{comment._id}}" class="comment border-bottom my-2" data-blog-id={{blog._id}} data-owner="{{comment.owner}}">
 
     <!-- COMMENT OWNER HANDLE -->
-
-    <p id="comment-handle-{{comment._id}}"> {{comment.handle}} commented:</p>
+    <p id="comment-handle-{{comment._id}}">{{comment.handle}} commented:</p>
     <!-- COMMENT TEXT -->
     <p id="comment-text-{{comment._id}}" class="text-justify">{{comment.text}}</p>
 
@@ -16,12 +15,12 @@
       <div id="comment-owned-{{comment._id}}" class="owned d-none w-100" data-owner="{{comment.owner}}">
         <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update" data-blog-id={{blog._id}}>
           <textarea id="comment-textarea-{{comment._id}}" class="w-100" name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
-          <button class="ml-auto" type="submit">Update Comment</button>
+          <button class="btn btn-success ml-auto" type="submit">Update Comment</button>
         </form>
 
         <!-- DELETE COMMENT BUTTON -->
         <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} data-owner="{{comment.owner}}" class="comment-crud-form owned ml-auto" data-action="delete">
-          <button class="bg-danger text-light" type="submit">Delete Comment</button>
+          <button class="btn btn-danger my-2 text-light" type="submit">Delete Comment</button>
         </form>
       </div>
 
@@ -30,11 +29,10 @@
 
     <!-- COMMENT EDIT BUTTON -->
     <div class="d-flex">
-      <button id="edit-comment-{{comment._id}}" class="edit-comment-btn owned" data-comment-id={{comment._id}} data-owner="{{comment.owner}}">Edit Comment</button>
+      <button id="edit-comment-{{comment._id}}" class="edit-comment-btn btn btn-info owned my-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}">Edit Comment</button>
     </div>
 
     <!-- COMMENT END -->
   </div>
 
-  <!-- LIST ITEM END -->
 {{/each}}
