added some comments

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -17,8 +17,8 @@
         <p class="text-secondary">{{blog.handle.0.handle}}</p>
 
         <div class="d-flex">
-          <p class="text-primary">{{blog.likes.length}} likes</p>
-          <p class="text-primary ml-auto">{{blog.comments.length}} comments</p>
+          <p class="text-primary border-right pr-2">{{blog.likes.length}} likes</p>
+          <p class="text-primary px-2">{{blog.comments.length}} comments</p>
         </div>
       </div>
 
