--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -10,11 +10,11 @@
       <div class="card-header" data-blog-id={{blog._id}} data-toggle="collapse" data-target="#card-body-blog-{{blog._id}}">
 
         <div class="d-flex">
-          <h4 id="blog-title-{{blog._id}}" class="card-title m-0 d-inline-block">{{blog.title}}</h4>
+          <h4 id="blog-title-{{blog._id}}" class="card-title m-0 d-inline-block" data-blog-id={{blog._id}}>{{blog.title}}</h4>
           <p class="owned editable ml-auto text-light bg-success rounded px-2" data-blog-id={{blog._id}} data-owner="{{blog.owner}}"></p>
         </div>
 
-        <p class="text-secondary">{{blog.handle.0.handle}}</p>
+        <p id="card-handle-{{blog._id}}" class="handle-text text-secondary" data-blog-id={{blog._id}} data-handle={{blog.handle.0.handle}}>{{blog.handle.0.handle}}</p>
 
         <div class="d-flex">
           <p class="text-secondary border-right pr-2">{{blog.likes.length}} likes</p>
@@ -36,7 +36,7 @@
         </div>
 
         <!-- BLOG BODY TEXT-->
-        <p id="blog-body-{{blog._id}}" class="card-text text-justify mt-3"><span class="mx-4"></span>{{blog.body}}</p>
+        <p id="blog-body-{{blog._id}}" class="card-text text-justify mt-3" data-blog-id={{blog._id}}><span class="mx-4"></span>{{blog.body}}</p>
 
         <!-- BLOG UPDATE/DELETE FORMS START -->
         <div class="my-1">
