Fix comment counter
- when new comment is created, counter will increase
- when comment is deleted, counter will decrease
- made changes in both handlebars and comment events and ui

--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -18,7 +18,7 @@
 
         <div class="d-flex">
           <p id="like-count-{{blog._id}}" class="text-secondary border-right pr-2">{{blog.likes.length}} likes</p>
-          <p class="text-secondary px-2">{{blog.comments.length}} comments</p>
+          <p id="comment-count-{{blog._id}}" class="text-secondary px-2">{{blog.comments.length}} comments</p>
         </div>
       </div>
 
