--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -1,41 +1,38 @@
 {{#each comment as |comment|}}
 
-  <!-- COMMENT START -->
-  <div id="comment-{{comment._id}}" class="comment border-bottom my-2" data-blog-id={{blog._id}} data-owner="{{comment.owner}}">
+<!-- COMMENT START -->
+<div id="comment-{{comment._id}}" class="comment border-bottom my-2" data-blog-id={{blog._id}} data-owner="{{comment.owner}}">
 
-    <!-- COMMENT OWNER HANDLE -->
-    <div class="d-flex">
-      <p id="comment-handle-{{comment._id}}" class="text-secondary"> commented:</p>
-      <p class="owned editable ml-auto text-light bg-success rounded px-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}"></p>
-    </div>
-    <!-- COMMENT TEXT -->
-    <p id="comment-text-{{comment._id}}" class="text-justify">{{comment.text}}</p>
+  <!-- COMMENT OWNER HANDLE -->
+  <div class="d-flex">
+    <p id="comment-handle-{{comment._id}}" class="text-secondary">{{comment.handle.0.handle}} commented:</p>
+    <p class="owned editable ml-auto text-light bg-success rounded px-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}"></p>
+  </div>
+  <!-- COMMENT TEXT -->
+  <p id="comment-text-{{comment._id}}" class="text-justify">{{comment.text}}</p>
 
-    <!-- UPDATE/DELETE COMMENT FORMS START -->
-    <div class="owned" data-owner="{{comment.owner}}">
+  <!-- UPDATE/DELETE COMMENT FORMS START -->
+  <div class="owned" data-owner="{{comment.owner}}">
 
-      <!-- UPDATE COMMENT FORM -->
-      <div id="comment-owned-{{comment._id}}" class="owned d-none w-100" data-owner="{{comment.owner}}">
-        <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update" data-blog-id={{blog._id}}>
-          <textarea id="comment-textarea-{{comment._id}}" class="w-100" name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
-          <button class="btn btn-success ml-auto" type="submit">Update Comment</button>
-        </form>
+    <!-- UPDATE COMMENT FORM -->
+    <div id="comment-owned-{{comment._id}}" class="owned d-none w-100" data-owner="{{comment.owner}}">
+      <form id="update-comment-{{comment._id}}" data-comment-id={{comment._id}} class="comment-crud-form" data-action="update" data-blog-id={{blog._id}}>
+        <textarea id="comment-textarea-{{comment._id}}" class="w-100" name="comment[text]" type="text" maxlength="1000" required>{{comment.text}}</textarea>
+        <button class="btn btn-success ml-auto" type="submit">Update Comment</button>
+      </form>
 
-        <!-- DELETE COMMENT BUTTON -->
-        <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} data-owner="{{comment.owner}}" class="comment-crud-form owned ml-auto" data-action="delete">
-          <button class="btn btn-danger my-2 text-light" type="submit">Delete Comment</button>
-        </form>
-      </div>
-
-      <!-- UPDATE/DELETE COMMENT FORMS END -->
+      <!-- DELETE COMMENT BUTTON -->
+      <form id="delete-comment-{{comment._id}}" data-comment-id={{comment._id}} data-blog-id-del={{comment.blog}} data-owner="{{comment.owner}}" class="comment-crud-form owned ml-auto" data-action="delete">
+        <button class="btn btn-danger my-2 text-light" type="submit">Delete Comment</button>
+      </form>
     </div>
 
-    <!-- COMMENT EDIT BUTTON -->
-    <div class="d-flex">
-      <button id="edit-comment-{{comment._id}}" class="edit-comment-btn btn btn-info owned my-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}">Edit Comment</button>
-    </div>
+    <!-- UPDATE/DELETE COMMENT FORMS END -->
+  </div>
 
-    <!-- COMMENT END -->
+  <!-- COMMENT EDIT BUTTON -->
+  <div class="d-flex">
+    <button id="edit-comment-{{comment._id}}" class="edit-comment-btn btn btn-info owned my-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}">Edit Comment</button>
   </div>
 
 
