--- a/assets/scripts/templates/comment-listing.handlebars
+++ b/assets/scripts/templates/comment-listing.handlebars
@@ -6,7 +6,7 @@
   <!-- COMMENT OWNER HANDLE -->
   <div class="d-flex">
     <p id="comment-handle-{{comment._id}}" class="text-secondary">{{comment.handle.0.handle}} commented:</p>
-    <p class="owned editable ml-auto text-light bg-success rounded px-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}"></p>
+    <p class="owned editable ml-auto text-light bg-orange-fix rounded px-2" data-comment-id={{comment._id}} data-owner="{{comment.owner}}"></p>
   </div>
   <!-- COMMENT TEXT -->
   <p id="comment-text-{{comment._id}}" class="text-justify">{{comment.text}}</p>
