--- a/assets/scripts/templates/blog-listing.handlebars
+++ b/assets/scripts/templates/blog-listing.handlebars
@@ -11,7 +11,7 @@
 
         <div class="d-flex">
           <h4 id="blog-title-{{blog._id}}" class="card-title m-0 d-inline-block" data-blog-id={{blog._id}}>{{blog.title}}</h4>
-          <p class="owned editable ml-auto bg-success rounded px-2" data-blog-id={{blog._id}} data-owner="{{blog.owner}}"></p>
+          <p class="owned editable ml-auto bg-orange-fix rounded px-2" data-blog-id={{blog._id}} data-owner="{{blog.owner}}"></p>
         </div>
 
         <p id="card-handle-{{blog._id}}" class="handle-text text-secondary" data-blog-id={{blog._id}} data-handle="{{blog.handle.0.handle}}">By: {{blog.handle.0.handle}}</p>
